--- a/Ajax1.html
+++ b/Ajax1.html
@@ -76,13 +76,13 @@ footer {background: red;color:white;}
 
 <li> Daley Sinkgraven</li>  </br>
 
-<li> Joël Veltman </li></br>
+<li> Joel Veltman </li></br>
 
 <li> Mitchell Dijks </li></br> 
 
 <li>  Luis Orejuela</li></br> 
 
-<li> Max Wöber</li></br>
+<li> Max Wober</li></br>
 
 <li> Deyovaisio Zeefuik</li></br>
 
@@ -99,7 +99,7 @@ footer {background: red;color:white;}
 
 <li>Abdelhak Nouri </li></br>
 
-<li>Lasse Schöne </li></br>
+<li>Lasse Schone </li></br>
 
 <li>Hakim Ziyech </li></br>
 <h4> Aanvallers </h4>
