--- a/ProgrammaAjax1.html
+++ b/ProgrammaAjax1.html
@@ -85,13 +85,13 @@ footer {background: red;color:white;}
 </br>
 </br>
 </br>
-<center><h3> Hier werd Johan Cruijff geëerd vlak na zijn overlijden.<h3></center> </br>
+<center><h3> Hier werd Johan Cruijff herdacht vlak na zijn overlijden.<h3></center> </br>
 <center><iframe width="560" height="315" src="https://www.youtube.com/embed/at5aaaXRqQY" frameborder="0" allowfullscreen></iframe></center>
 </br>
 </br>
 </br>
 </br>
-<center><h3> Top 10 goals van Luis Suárez, momenteel spelend bij FC Barcelona.<h3></center> </br>
+<center><h3> Top 10 goals van Luis Suarez, momenteel spelend bij FC Barcelona.<h3></center> </br>
 <center><iframe width="560" height="315" src="https://www.youtube.com/embed/smgK4eITrdo" frameborder="0" allowfullscreen></iframe></center>
 </br>
 </br>
